vendor/htslib/sam.h


typedef struct sam_hrecs_t sam_hrecs_t;
typedef struct sam_hdr_t {
  int32_t n_targets, ignore_sam_err;
  size_t l_text;
  uint32_t *target_len;
  const int8_t *cigar_tab HTS_DEPRECATED("Use bam_cigar_table[] instead");
  char **target_name;
  char *text;
  void *sdict;
  sam_hrecs_t *hrecs;
  uint32_t ref_count;
} sam_hdr_t;
typedef struct bam1_core_t {
  hts_pos_t pos;
  int32_t tid;
  uint16_t bin; 
  uint8_t qual;
  uint8_t l_extranul;
  uint16_t flag;
  uint16_t l_qname;
  uint32_t n_cigar;
  int32_t l_qseq;
  int32_t mtid;
  hts_pos_t mpos;
  hts_pos_t isize;
} bam1_core_t;
typedef struct bam1_t {
  bam1_core_t core;
  uint64_t id;
  uint8_t *data;
  int l_data;
  uint32_t m_data;
  uint32_t mempolicy : 2, : 30 ;
} bam1_t;
typedef htsFile samFile;
typedef union {
  void *p;
  int64_t i;
  double f;
} bam_pileup_cd;
typedef struct bam_pileup1_t {
  bam1_t *b;
  int32_t qpos;
  int indel, level;
  uint32_t is_del : 1, is_head : 1, is_tail : 1, is_refskip : 1,
       : 1, aux : 27;
  bam_pileup_cd cd; 
  int cigar_ind;
} bam_pileup1_t;
typedef int (*bam_plp_auto_f)(void *data, bam1_t *b);
struct bam_plp_s;
typedef struct bam_plp_s *bam_plp_t;
struct bam_mplp_s;
typedef struct bam_mplp_s *bam_mplp_t;
HTSLIB_EXPORT
const bam_pileup1_t *bam_plp_next(bam_plp_t iter, int *_tid, int *_pos,
                                  int *_n_plp);
HTSLIB_EXPORT
const bam_pileup1_t *bam_plp_auto(bam_plp_t iter, int *_tid, int *_pos,
                                  int *_n_plp);
HTSLIB_EXPORT
const bam_pileup1_t *bam_plp64_next(bam_plp_t iter, int *_tid, hts_pos_t *_pos,
                                    int *_n_plp);
HTSLIB_EXPORT
const bam_pileup1_t *bam_plp64_auto(bam_plp_t iter, int *_tid, hts_pos_t *_pos,
                                    int *_n_plp);
HTSLIB_EXPORT
void bam_plp_set_maxcnt(bam_plp_t iter, int maxcnt);
HTSLIB_EXPORT
void bam_plp_reset(bam_plp_t iter);
HTSLIB_EXPORT
void bam_plp_constructor(bam_plp_t plp, int (*func)(void *data, const bam1_t *b,
                                                    bam_pileup_cd *cd));
HTSLIB_EXPORT
void bam_plp_destructor(bam_plp_t plp, int (*func)(void *data, const bam1_t *b,
                                                   bam_pileup_cd *cd));
HTSLIB_EXPORT
int bam_plp_insertion(const bam_pileup1_t *p, kstring_t *ins,
                      int *del_len) HTS_RESULT_USED;
typedef struct hts_base_mod_state hts_base_mod_state;
HTSLIB_EXPORT
int bam_plp_insertion_mod(const bam_pileup1_t *p, hts_base_mod_state *m,
                          kstring_t *ins, int *del_len) HTS_RESULT_USED;
HTSLIB_EXPORT
bam_mplp_t bam_mplp_init(int n, bam_plp_auto_f func, void **data);
HTSLIB_EXPORT
int bam_mplp_init_overlaps(bam_mplp_t iter);
HTSLIB_EXPORT
void bam_mplp_destroy(bam_mplp_t iter);
HTSLIB_EXPORT
void bam_mplp_set_maxcnt(bam_mplp_t iter, int maxcnt);
HTSLIB_EXPORT
int bam_mplp_auto(bam_mplp_t iter, int *_tid, int *_pos, int *n_plp,
                  const bam_pileup1_t **plp);
HTSLIB_EXPORT
int bam_mplp64_auto(bam_mplp_t iter, int *_tid, hts_pos_t *_pos, int *n_plp,
                    const bam_pileup1_t **plp);
HTSLIB_EXPORT
void bam_mplp_reset(bam_mplp_t iter);
HTSLIB_EXPORT
void bam_mplp_constructor(bam_mplp_t iter,
                          int (*func)(void *data, const bam1_t *b,
                                      bam_pileup_cd *cd));
HTSLIB_EXPORT
void bam_mplp_destructor(bam_mplp_t iter,
                         int (*func)(void *data, const bam1_t *b,
                                     bam_pileup_cd *cd));
HTSLIB_EXPORT
int sam_cap_mapq(bam1_t *b, const char *ref, hts_pos_t ref_len, int thres);
HTSLIB_EXPORT
int sam_prob_realn(bam1_t *b, const char *ref, hts_pos_t ref_len, int flag);
typedef struct hts_base_mod {
  int modified_base;
  int canonical_base;
  int strand;
  int qual;
} hts_base_mod;
HTSLIB_EXPORT
hts_base_mod_state *hts_base_mod_state_alloc(void);
HTSLIB_EXPORT
void hts_base_mod_state_free(hts_base_mod_state *state);
HTSLIB_EXPORT
int bam_parse_basemod(const bam1_t *b, hts_base_mod_state *state);
HTSLIB_EXPORT
int bam_parse_basemod2(const bam1_t *b, hts_base_mod_state *state,
                       uint32_t flags);
HTSLIB_EXPORT
int bam_mods_at_next_pos(const bam1_t *b, hts_base_mod_state *state,
                         hts_base_mod *mods, int n_mods);
HTSLIB_EXPORT
int bam_next_basemod(const bam1_t *b, hts_base_mod_state *state,
                     hts_base_mod *mods, int n_mods, int *pos);
HTSLIB_EXPORT
int bam_mods_at_qpos(const bam1_t *b, int qpos, hts_base_mod_state *state,
                     hts_base_mod *mods, int n_mods);
HTSLIB_EXPORT
int bam_mods_query_type(hts_base_mod_state *state, int code, int *strand,
                        int *implicit, char *canonical);
HTSLIB_EXPORT
int bam_mods_queryi(hts_base_mod_state *state, int i, int *strand,
                    int *implicit, char *canonical);
HTSLIB_EXPORT
int *bam_mods_recorded(hts_base_mod_state *state, int *ntype);
HTSLIB_EXPORT
int sam_hdr_set(samFile *fp, sam_hdr_t *h, int dup);
HTSLIB_EXPORT
sam_hdr_t *sam_hdr_get(samFile *fp);