hts_mojo/_ffi/sam.mojo


def bam_plp_next(iter: bam_plp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[c_int, MutExternalOrigin], _n_plp: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> UnsafePointer[bam_pileup1_t, ImmutExternalOrigin]:
    return external_call["bam_plp_next", UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], bam_plp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](iter, _tid, _pos, _n_plp)

def bam_plp_auto(iter: bam_plp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[c_int, MutExternalOrigin], _n_plp: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> UnsafePointer[bam_pileup1_t, ImmutExternalOrigin]:
    return external_call["bam_plp_auto", UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], bam_plp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](iter, _tid, _pos, _n_plp)

def bam_plp64_next(iter: bam_plp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[hts_pos_t, MutExternalOrigin], _n_plp: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> UnsafePointer[bam_pileup1_t, ImmutExternalOrigin]:
    return external_call["bam_plp64_next", UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], bam_plp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[hts_pos_t, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](iter, _tid, _pos, _n_plp)

def bam_plp64_auto(iter: bam_plp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[hts_pos_t, MutExternalOrigin], _n_plp: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> UnsafePointer[bam_pileup1_t, ImmutExternalOrigin]:
    return external_call["bam_plp64_auto", UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], bam_plp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[hts_pos_t, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](iter, _tid, _pos, _n_plp)

def bam_plp_set_maxcnt(iter: bam_plp_t, maxcnt: c_int) abi("C") -> None:
    external_call["bam_plp_set_maxcnt", NoneType, bam_plp_t, c_int](iter, maxcnt)

def bam_plp_reset(iter: bam_plp_t) abi("C") -> None:
    external_call["bam_plp_reset", NoneType, bam_plp_t](iter)

def bam_plp_constructor(plp: bam_plp_t, func: bam_plp_constructor_func_cb) abi("C") -> None:
    external_call["bam_plp_constructor", NoneType, bam_plp_t, bam_plp_constructor_func_cb](plp, func)

def bam_plp_destructor(plp: bam_plp_t, func: bam_plp_destructor_func_cb) abi("C") -> None:
    external_call["bam_plp_destructor", NoneType, bam_plp_t, bam_plp_destructor_func_cb](plp, func)

def bam_plp_insertion(p: UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], ins: UnsafePointer[kstring_t, MutExternalOrigin], del_len: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_plp_insertion", c_int, UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](p, ins, del_len)

def bam_plp_insertion_mod(p: UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], m: UnsafePointer[hts_base_mod_state, MutExternalOrigin], ins: UnsafePointer[kstring_t, MutExternalOrigin], del_len: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_plp_insertion_mod", c_int, UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](p, m, ins, del_len)

def bam_mplp_init(n: c_int, func: bam_plp_auto_f, data: UnsafePointer[MutOpaquePointer[MutExternalOrigin], MutExternalOrigin]) abi("C") -> bam_mplp_t:
    return external_call["bam_mplp_init", bam_mplp_t, c_int, bam_plp_auto_f, UnsafePointer[MutOpaquePointer[MutExternalOrigin], MutExternalOrigin]](n, func, data)

def bam_mplp_init_overlaps(iter: bam_mplp_t) abi("C") -> c_int:
    return external_call["bam_mplp_init_overlaps", c_int, bam_mplp_t](iter)

def bam_mplp_destroy(iter: bam_mplp_t) abi("C") -> None:
    external_call["bam_mplp_destroy", NoneType, bam_mplp_t](iter)

def bam_mplp_set_maxcnt(iter: bam_mplp_t, maxcnt: c_int) abi("C") -> None:
    external_call["bam_mplp_set_maxcnt", NoneType, bam_mplp_t, c_int](iter, maxcnt)

def bam_mplp_auto(iter: bam_mplp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[c_int, MutExternalOrigin], n_plp: UnsafePointer[c_int, MutExternalOrigin], plp: UnsafePointer[UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_mplp_auto", c_int, bam_mplp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], MutExternalOrigin]](iter, _tid, _pos, n_plp, plp)

def bam_mplp64_auto(iter: bam_mplp_t, _tid: UnsafePointer[c_int, MutExternalOrigin], _pos: UnsafePointer[hts_pos_t, MutExternalOrigin], n_plp: UnsafePointer[c_int, MutExternalOrigin], plp: UnsafePointer[UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_mplp64_auto", c_int, bam_mplp_t, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[hts_pos_t, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[UnsafePointer[bam_pileup1_t, ImmutExternalOrigin], MutExternalOrigin]](iter, _tid, _pos, n_plp, plp)

def bam_mplp_reset(iter: bam_mplp_t) abi("C") -> None:
    external_call["bam_mplp_reset", NoneType, bam_mplp_t](iter)

def bam_mplp_constructor(iter: bam_mplp_t, func: bam_mplp_constructor_func_cb) abi("C") -> None:
    external_call["bam_mplp_constructor", NoneType, bam_mplp_t, bam_mplp_constructor_func_cb](iter, func)

def bam_mplp_destructor(iter: bam_mplp_t, func: bam_mplp_destructor_func_cb) abi("C") -> None:
    external_call["bam_mplp_destructor", NoneType, bam_mplp_t, bam_mplp_destructor_func_cb](iter, func)

def sam_cap_mapq(b: UnsafePointer[bam1_t, MutExternalOrigin], ref_: UnsafePointer[c_char, ImmutExternalOrigin], ref_len: hts_pos_t, thres: c_int) abi("C") -> c_int:
    return external_call["sam_cap_mapq", c_int, UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], hts_pos_t, c_int](b, ref_, ref_len, thres)

def sam_prob_realn(b: UnsafePointer[bam1_t, MutExternalOrigin], ref_: UnsafePointer[c_char, ImmutExternalOrigin], ref_len: hts_pos_t, flag: c_int) abi("C") -> c_int:
    return external_call["sam_prob_realn", c_int, UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], hts_pos_t, c_int](b, ref_, ref_len, flag)

def hts_base_mod_state_alloc() abi("C") -> UnsafePointer[hts_base_mod_state, MutExternalOrigin]:
    return external_call["hts_base_mod_state_alloc", UnsafePointer[hts_base_mod_state, MutExternalOrigin]]()

def hts_base_mod_state_free(state: UnsafePointer[hts_base_mod_state, MutExternalOrigin]) abi("C") -> None:
    external_call["hts_base_mod_state_free", NoneType, UnsafePointer[hts_base_mod_state, MutExternalOrigin]](state)

def bam_parse_basemod(b: UnsafePointer[bam1_t, ImmutExternalOrigin], state: UnsafePointer[hts_base_mod_state, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_parse_basemod", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin]](b, state)

def bam_parse_basemod2(b: UnsafePointer[bam1_t, ImmutExternalOrigin], state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], flags: uint32_t) abi("C") -> c_int:
    return external_call["bam_parse_basemod2", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin], uint32_t](b, state, flags)

def bam_mods_at_next_pos(b: UnsafePointer[bam1_t, ImmutExternalOrigin], state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], mods: UnsafePointer[hts_base_mod, MutExternalOrigin], n_mods: c_int) abi("C") -> c_int:
    return external_call["bam_mods_at_next_pos", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin], UnsafePointer[hts_base_mod, MutExternalOrigin], c_int](b, state, mods, n_mods)

def bam_next_basemod(b: UnsafePointer[bam1_t, ImmutExternalOrigin], state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], mods: UnsafePointer[hts_base_mod, MutExternalOrigin], n_mods: c_int, pos: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_next_basemod", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin], UnsafePointer[hts_base_mod, MutExternalOrigin], c_int, UnsafePointer[c_int, MutExternalOrigin]](b, state, mods, n_mods, pos)

def bam_mods_at_qpos(b: UnsafePointer[bam1_t, ImmutExternalOrigin], qpos: c_int, state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], mods: UnsafePointer[hts_base_mod, MutExternalOrigin], n_mods: c_int) abi("C") -> c_int:
    return external_call["bam_mods_at_qpos", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], c_int, UnsafePointer[hts_base_mod_state, MutExternalOrigin], UnsafePointer[hts_base_mod, MutExternalOrigin], c_int](b, qpos, state, mods, n_mods)

def bam_mods_query_type(state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], code: c_int, strand: UnsafePointer[c_int, MutExternalOrigin], implicit: UnsafePointer[c_int, MutExternalOrigin], canonical: UnsafePointer[c_char, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_mods_query_type", c_int, UnsafePointer[hts_base_mod_state, MutExternalOrigin], c_int, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_char, MutExternalOrigin]](state, code, strand, implicit, canonical)

def bam_mods_queryi(state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], i: c_int, strand: UnsafePointer[c_int, MutExternalOrigin], implicit: UnsafePointer[c_int, MutExternalOrigin], canonical: UnsafePointer[c_char, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_mods_queryi", c_int, UnsafePointer[hts_base_mod_state, MutExternalOrigin], c_int, UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_char, MutExternalOrigin]](state, i, strand, implicit, canonical)

def bam_mods_recorded(state: UnsafePointer[hts_base_mod_state, MutExternalOrigin], ntype: UnsafePointer[c_int, MutExternalOrigin]) abi("C") -> UnsafePointer[c_int, MutExternalOrigin]:
    return external_call["bam_mods_recorded", UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[hts_base_mod_state, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](state, ntype)

def sam_hdr_set(fp: UnsafePointer[samFile, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, MutExternalOrigin], dup: c_int) abi("C") -> c_int:
    return external_call["sam_hdr_set", c_int, UnsafePointer[samFile, MutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], c_int](fp, h, dup)

def sam_hdr_get(fp: UnsafePointer[samFile, MutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["sam_hdr_get", UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[samFile, MutExternalOrigin]](fp)
